--- a/README.Rmd
+++ b/README.Rmd
@@ -15,42 +15,30 @@ knitr::opts_chunk$set(
 
 # discoverr
 
-<!-- badges: start -->
-[![Lifecycle: experimental](https://img.shields.io/badge/lifecycle-experimental-orange.svg)](https://www.tidyverse.org/lifecycle/#experimental)
-[![CRAN status](https://www.r-pkg.org/badges/version/discoverr)](https://CRAN.R-project.org/package=discoverr)
-<!-- badges: end -->
-
-The goal of discoverr is to ...
+The goal of discoverr is to automate the first data discovery steps.
 
 ## Installation
 
 You can install the released version of discoverr from [CRAN](https://CRAN.R-project.org) with:
 
 ``` r
-install.packages("discoverr")
+# install.packages("devtools")
+devtools::install_github("edo91/prettifier")
 ```
 
 ## Example
 
-This is a basic example which shows you how to solve a common problem:
+TThis is a basic example which shows you how to solve a common problem:
 
 ```{r example}
 library(discoverr)
 ## basic example code
 ```
 
-What is special about using `README.Rmd` instead of just `README.md`? You can include R chunks like so:
-
-```{r cars}
-summary(cars)
+```{r}
+plot_var(iris)
 ```
 
-You'll still need to render `README.Rmd` regularly, to keep `README.md` up-to-date.
-
-You can also embed plots, for example:
-
-```{r pressure, echo = FALSE}
-plot(pressure)
+```{r}
+plot_2var(iris)
 ```
-
-In that case, don't forget to commit and push the resulting figure files, so they display on GitHub!
