--- a/README.Rmd
+++ b/README.Rmd
@@ -13,26 +13,24 @@ knitr::opts_chunk$set(
 )
 ```
 
-# discoverr
+# `discoverr`
 
-The goal of discoverr is to automate the first data discovery steps.
+The goal of `discoverr` is to automate the first data discovery steps.
 
 ## Installation
 
-You can install the released version of discoverr from [CRAN](https://CRAN.R-project.org) with:
+You can install `discoverr` with:
 
 ``` r
-# install.packages("devtools")
-devtools::install_github("edo91/prettifier")
+devtools::install_github("edo91/discoverr")
 ```
 
 ## Example
 
-TThis is a basic example which shows you how to solve a common problem:
+This is a basic example which shows you how to solve a common problem:
 
 ```{r example}
 library(discoverr)
-## basic example code
 ```
 
 ```{r}
